fix: only wrap investigator list cards

--- a/src/components/list-card/list-card.module.css
+++ b/src/components/list-card/list-card.module.css
@@ -103,7 +103,7 @@
 
 .meta {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   align-items: center;
   line-height: 1;
   gap: calc(var(--card-spacing-x) / 1.5);
@@ -197,6 +197,10 @@
   --card-spacing-x: 0.5rem;
   --card-image-height: 2.5rem;
   padding-inline: 0;
+
+  & .meta {
+    flex-wrap: wrap;
+  }
 }
 
 .listcard-wrapper.borders {
